src/main/java/com/example/signalapp/error/SignalAppAccessException.java
package com.example.signalapp.error;

public class SignalAppAccessException extends Exception {
}
